PostGIS 2.5.0rc2
2018/08/xx
New since PostGIS 2.5.0rc1
  - #4162, ST_DWithin documentation examples for storing geometry and
    radius in table (Darafei Praliaskouski, github user Boscop).
  - #4163, MVT: Fix resource leak when the first geometry is NULL (Raúl Marín)

PostGIS 2.5.0rc1
2018/08/19
New since PostGIS 2.5.0beta2
  - #4146, Fix compilation error against Postgres 12 (Raúl Marín).
  - #4147, #4148, Honor SOURCE_DATE_EPOCH when present (Christoph Berg).

PostGIS 2.5.0beta2
2018/08/11
New since PostGIS 2.5.0beta1
  - #4115, Fix a bug that created MVTs with incorrect property values under
    parallel plans (Raúl Marín).
  - #4120, ST_AsMVTGeom: Clip using tile coordinates (Raúl Marín).
  - #4132, ST_Intersection on Raster now works without throwing TopologyException
    (Vinícius A.B. Schmidt, Darafei Praliaskouski)
  - #4109, Fix WKT parser accepting and interpreting numbers with
    multiple dots (Raúl Marín, Paul Ramsey)
  - #4140, Use user-provided CFLAGS in address standardizer and the
    topology module (Raúl Marín)
  - #4143, Fix backend crash when ST_OffsetCurve fails (Dan Baston)
  - #4145, Speedup MVT column parsing (Raúl Marín)

  See PostGIS 2.5.0 section for full details


PostGIS 2.5.0beta1
2018/07/03
New since PostGIS 2.5.0alpha
  - #1847, spgist 2d and 3d support for PG 11+
    (Esteban Zimányi and Arthur Lesuisse from Université Libre de Bruxelles (ULB),
      Darafei Praliaskouski)

  - Numerous packaging fixes
  See PostGIS 2.5.0 section for full details


PostGIS 2.5.0alpha
2018/05/28
See PostGIS 2.5.0 section for details

PostGIS 2.5.0
2018/xx/xx

* New Features *
  - #1847, spgist 2d and 3d support for PG 11+
    (Esteban Zimányi and Arthur Lesuisse from Université Libre de Bruxelles (ULB),
      Darafei Praliaskouski)
  - #4056, ST_FilterByM (Nicklas Avén)
  - #4050, ST_ChaikinSmoothing (Nicklas Avén)
  - #3989, ST_Buffer single sided option (Stephen Knox)
  - #3876, ST_Angle function (Rémi Cura)